backend authentication up and running

--- a/package.json
+++ b/package.json
@@ -1,25 +1,16 @@
 {
-  "name": "spotify-app",
+  "name": "oauth-bridge-template",
   "version": "1.0.0",
-  "description": "Spotify Party Queue",
   "main": "index.js",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "concurrently \" node server \" \" npm start --prefix client\""
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/zzhenney/spotify-app.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/zzhenney/spotify-app/issues"
-  },
-  "homepage": "https://github.com/zzhenney/spotify-app#readme",
   "dependencies": {
-    "body-parser": "^1.18.3",
-    "cors": "^2.8.5",
-    "express": "^4.16.4"
+    "concurrently": "^4.1.0",
+    "express": "^4.15.4",
+    "querystring": "^0.2.0",
+    "request": "^2.81.0"
   }
 }
