--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
   "dependencies": {
     "concurrently": "^4.1.0",
     "express": "^4.15.4",
+    "query-string": "^6.4.0",
     "querystring": "^0.2.0",
-    "request": "^2.81.0"
+    "react-redux": "^6.0.1",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
+    "request": "^2.81.0",
+    "thunk": "0.0.1"
   }
 }
