--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "query-string": "^6.4.0",
     "querystring": "^0.2.0",
     "react-redux": "^6.0.1",
+    "react-router-dom": "^5.0.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "request": "^2.81.0",
