--- a/package.json
+++ b/package.json
@@ -4,19 +4,38 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "dev": "concurrently \" node server \" \" npm start --prefix client\""
+    "start": " node ./bin/www",
+    "dev": "concurrently \" NODE_ENV=development DEBUG=spotifyqueue:* nodemon ./bin/www \" \" npm start --prefix client\"",
+    "db:create:migration": "sequelize migration:generate --name ",
+    "db:migrate": "sequelize db:migrate",
+    "db:rollback": "sequelize db:migrate:undo"
   },
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.19.0",
+    "body-parser": "^1.19.0",
     "concurrently": "^4.1.0",
+    "connect-pg-simple": "^5.0.0",
+    "cors": "^2.8.5",
+    "dotenv": "^7.0.0",
     "express": "^4.15.4",
+    "express-session": "^1.16.1",
+    "morgan": "^1.9.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "pg-promise": "^8.6.5",
     "query-string": "^6.4.0",
     "querystring": "^0.2.0",
+    "react": "^16.8.5",
     "react-redux": "^6.0.1",
+    "react-router-dom": "^5.0.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "request": "^2.81.0",
+    "sequelize": "^5.6.1",
+    "sequelize-cli": "^5.5.0",
     "thunk": "0.0.1"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.11"
   }
 }
