--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "oauth-bridge-template",
   "version": "1.0.0",
   "main": "index.js",
+  "proxy": "http://localhost:5000",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": " node ./bin/www",
